src/main/java/com/example/bankapplication/controllers/errors/BadMovingAverageWindowException.java
package com.example.bankapplication.controllers.errors;

public class BadMovingAverageWindowException extends Exception{
}
